@@ -42,6 +42,9 @@ dependencies {
     implementation 'org.opensearch.client:opensearch-rest-client:2.13.0'
     implementation 'org.opensearch.client:opensearch-java:2.13.0'
 
+    // WebClient (공공데이터 API 호출용)
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
     constraints {
         implementation('org.apache.commons:commons-compress:1.26.0') {
             because 'CVE-2024-25710, CVE-2024-26308 보안 취약점 대응'
@@ -80,4 +83,5 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs += ['-Djdk.attach.allowAttachSelf=true']
 }
